--- a/packages/graphql-signalr-subscriptions/package.json
+++ b/packages/graphql-signalr-subscriptions/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "0.1.0",
   "main": "./dist/esm/SignalRPubSub.js",
+  "types": "./dist/esm/*.d.ts",
   "exports": {
     "import": "./dist/esm/SignalRPubSub.js",
     "require": "./dist/cjs/SignalRPubSub.js"
