--- a/example/cosmosdb/package.json
+++ b/example/cosmosdb/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@aaronpowell/graphql-cosmosdb-subscriptions": "file:../../packages/graphql-cosmosdb-subscriptions",
     "@azure/cosmos": "^3.9.5",
+    "@graphql-tools/graphql-file-loader": "^6.2.7",
+    "@graphql-tools/load": "^6.2.7",
+    "@graphql-tools/schema": "^7.1.3",
     "apollo-datasource-cosmosdb": "0.0.16",
     "apollo-server": "^2.21.0",
     "dotenv": "^8.2.0",
-    "graphql": "^15.5.0",
-    "graphql-import": "^1.0.2"
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
     "typescript": "^4.1.5"
