--- a/example/signalr/package.json
+++ b/example/signalr/package.json
@@ -16,10 +16,12 @@
   "license": "MIT",
   "dependencies": {
     "@aaronpowell/graphql-signalr-subscriptions": "file:../../packages/graphql-signalr-subscriptions",
+    "@graphql-tools/graphql-file-loader": "^6.2.7",
+    "@graphql-tools/load": "^6.2.7",
+    "@graphql-tools/schema": "^7.1.3",
     "apollo-server": "^2.21.0",
     "dotenv": "^8.2.0",
-    "graphql": "^15.5.0",
-    "graphql-import": "^1.0.2"
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
     "typescript": "^4.1.5"
