--- a/packages/example-cosmosdb/package.json
+++ b/packages/example-cosmosdb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "signalr",
+  "name": "example-cosmosdb",
   "version": "1.0.0",
   "private": true,
   "description": "",
@@ -9,21 +9,21 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "build": "tsc",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "clean": "rm -rf ./dist"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@aaronpowell/graphql-signalr-subscriptions": "file:../../packages/graphql-signalr-subscriptions",
+    "@aaronpowell/graphql-cosmosdb-subscriptions": "*",
+    "@azure/cosmos": "^3.9.5",
     "@graphql-tools/graphql-file-loader": "^6.2.7",
     "@graphql-tools/load": "^6.2.7",
     "@graphql-tools/schema": "^7.1.3",
+    "apollo-datasource-cosmosdb": "0.0.16",
     "apollo-server": "^2.21.0",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0"
-  },
-  "devDependencies": {
-    "typescript": "^4.1.5"
   }
 }
