--- a/packages/graphql-cosmosdb-subscriptions/package.json
+++ b/packages/graphql-cosmosdb-subscriptions/package.json
@@ -37,18 +37,9 @@
     "url": "https://github.com/aaronpowell/graphql-azure-subscriptions/issues"
   },
   "homepage": "https://github.com/aaronpowell/graphql-azure-subscriptions",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.0.9",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.5"
-  },
   "dependencies": {
     "@azure/cosmos": "^3.9.5",
+    "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.0"
   }
 }
