--- a/packages/graphql-signalr-subscriptions/package.json
+++ b/packages/graphql-signalr-subscriptions/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "0.1.1",
   "main": "./dist/esm/SignalRPubSub.js",
-  "types": "./dist/esm/*.d.ts",
+  "types": "./dist/esm/SignalRPubSub.d.ts",
   "exports": {
     "import": "./dist/esm/SignalRPubSub.js",
     "require": "./dist/cjs/SignalRPubSub.js"
@@ -30,28 +30,12 @@
   },
   "license": "MIT",
   "description": "A GraphQL subscriptions library using Azure SignalR Service",
-  "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node-fetch": "^2.5.8",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.0.9",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.5"
-  },
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
+    "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
   },
   "repository": {
     "type": "git",
