--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
         registry-url: https://npm.pkg.github.com/
         scope: "@aaronpowell"
     - run: echo "registry=https://npm.pkg.github.com/@aaronpowell" >> .npmrc
-    - run: ls *.tgz
-    - run: ls *.tgz | xargs npm publish --access public
+    - run: npm publish $(ls *cosmos*.tgz) --access public
+    - run: npm publish $(ls *signalr*.tgz) --access public
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
