--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -142,7 +142,10 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://registry.npmjs.org/
-      - run: npm publish $(ls *.tgz) --access public
+      - run: npm publish $(ls *cosmos*.tgz) --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+      - run: npm publish $(ls *signalr*.tgz) --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
@@ -164,6 +167,9 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: "@aaronpowell"
       - run: echo "registry=https://npm.pkg.github.com/@aaronpowell" >> .npmrc
-      - run: npm publish $(ls *.tgz) --access public
+      - run: npm publish $(ls *cosmos*.tgz) --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - run: npm publish $(ls *signalr*.tgz) --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
