overhaul of local build and devDeps management

--- a/packages/graphql-cosmosdb-subscriptions/package.json
+++ b/packages/graphql-cosmosdb-subscriptions/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
-    "build": "npm run build:esm && npm run build:cjs",
+    "build": "concurrently 'npm:build:esm' 'npm:build:cjs'",
+    "prebuild": "npm run clean",
     "watch": "tsc -w",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
@@ -37,16 +38,6 @@
     "url": "https://github.com/aaronpowell/graphql-azure-subscriptions/issues"
   },
   "homepage": "https://github.com/aaronpowell/graphql-azure-subscriptions",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.0.9",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.5"
-  },
   "dependencies": {
     "@azure/cosmos": "^3.9.5",
     "graphql-subscriptions": "^1.2.0"
