--- a/packages/graphql-signalr-subscriptions/package.json
+++ b/packages/graphql-signalr-subscriptions/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "clean": "rm -rf dist",
-    "postinstall": "cd ../../ && npm ci"
+    "postinstall": "cd ../../ && npm install"
   },
   "keywords": [
     "azure",
