--- a/packages/graphql-cosmosdb-subscriptions/package.json
+++ b/packages/graphql-cosmosdb-subscriptions/package.json
@@ -17,8 +17,7 @@
     "watch": "tsc -w",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "clean": "rm -rf dist",
-    "postinstall": "cd ../../ && npm install"
+    "clean": "rm -rf dist"
   },
   "keywords": [
     "azure",
