--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,28 +8,34 @@ on:
 
 jobs:
   build_signalr:
-    defaults:
-      run:
-        working-directory: packages/graphql-signalr-subscriptions
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-18.04]
         node-version: [10.x, 12.x, 14.x]
-
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run build
-    # TODO - tests
-    # - run: npm test
-    - run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
-    - run: npm pack
+    - name: Install shared deps
+      run: npm ci
+
+    - name: Build
+      run: |
+        npm ci
+        npm run lint
+        npm run build
+        # TODO - tests
+        # npm test
+      working-directory: packages/graphql-signalr-subscriptions
+
+    - name: Package
+      run: |
+        npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
+        npm pack
+      working-directory: packages/graphql-signalr-subscriptions
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
@@ -37,9 +43,6 @@ jobs:
         path: "packages/graphql-signalr-subscriptions/*.tgz"
 
   build_cosmosdb:
-    defaults:
-      run:
-        working-directory: packages/graphql-cosmosdb-subscriptions
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -52,13 +55,24 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run lint
-    - run: npm run build
-    # TODO - tests
-    # - run: npm test
-    - run: npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
-    - run: npm pack
+    - name: Install shared deps
+      run: npm ci
+
+    - name: Build
+      run: |
+        npm ci
+        npm run lint
+        npm run build
+        # TODO - tests
+        # npm test
+      working-directory: packages/graphql-cosmosdb-subscriptions
+
+    - name: Package
+      run: |
+        npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version
+        npm pack
+      working-directory: packages/graphql-cosmosdb-subscriptions
+
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
