--- a/packages/graphql-cosmosdb-subscriptions/package.json
+++ b/packages/graphql-cosmosdb-subscriptions/package.json
@@ -41,5 +41,15 @@
   "dependencies": {
     "@azure/cosmos": "^3.9.5",
     "graphql-subscriptions": "^1.2.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "concurrently": "^6.0.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.5"
   }
 }
