--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -103,7 +103,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: release_id
-          path: packages/graphql-signalr-subscriptions/release.txt
+          path: release.txt
 
   release:
     needs: build
