--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "private": true,
   "devDependencies": {
-    "concurrently": "^6.0.0",
-    "husky": "^5.0.9",
-    "prettier": "^2.2.1",
-    "typescript": "^4.1.5"
+    "husky": "^5.0.9"
   },
+  "workspaces": [
+    "./packages/*"
+  ],
   "scripts": {
     "lint:cosmos": "cd packages/graphql-cosmosdb-subscriptions && npm run lint",
     "lint:signalr": "cd packages/graphql-signalr-subscriptions && npm run lint",
