--- a/packages/graphql-signalr-subscriptions/package.json
+++ b/packages/graphql-signalr-subscriptions/package.json
@@ -44,7 +44,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "@aspnet/signalr": "^1.1.4",
+    "@microsoft/signalr": "^5.0.4",
     "graphql-subscriptions": "1.2.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1"
