--- a/example/signalr/package.json
+++ b/example/signalr/package.json
@@ -19,7 +19,7 @@
     "@graphql-tools/graphql-file-loader": "^6.2.7",
     "@graphql-tools/load": "^6.2.7",
     "@graphql-tools/schema": "^7.1.3",
-    "apollo-server": "^2.21.0",
+    "apollo-server-express": "^2.21.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0"
   },
